generated-sources/antlr4/grammar/PickleCannonParser.java
// Generated from PickleCannon.g4 by ANTLR 4.9.2
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PickleCannonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOL=1, INT=2, ELSE=3, FALSE=4, FORK=5, IF=6, JOIN=7, PRINT=8, PICKLE=9, 
		CANNON=10, SYNC=11, TRUE=12, WHILE=13, AND=14, OR=15, ASSIGN=16, COMMA=17, 
		EQ=18, GE=19, GT=20, LE=21, LBRACE=22, LPAR=23, LSQ=24, LT=25, MINUS=26, 
		NE=27, NOT=28, PLUS=29, RBRACE=30, RPAR=31, RSQ=32, SEMI=33, SLASH=34, 
		STAR=35, ID=36, NUM=37, WS=38;
	public static final int
		RULE_program = 0, RULE_proc = 1, RULE_pars = 2, RULE_block = 3, RULE_stat = 4, 
		RULE_target = 5, RULE_args = 6, RULE_expr = 7, RULE_prfOp = 8, RULE_multOp = 9, 
		RULE_plusOp = 10, RULE_boolOp = 11, RULE_compOp = 12, RULE_type = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "proc", "pars", "block", "stat", "target", "args", "expr", 
			"prfOp", "multOp", "plusOp", "boolOp", "compOp", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'&&'", "'||'", "'='", "','", "'=='", "'>='", "'>'", "'<='", 
			"'{'", "'('", "'['", "'<'", "'-'", "'!='", "'!'", "'+'", "'}'", "')'", 
			"']'", "';'", "'/'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOOL", "INT", "ELSE", "FALSE", "FORK", "IF", "JOIN", "PRINT", 
			"PICKLE", "CANNON", "SYNC", "TRUE", "WHILE", "AND", "OR", "ASSIGN", "COMMA", 
			"EQ", "GE", "GT", "LE", "LBRACE", "LPAR", "LSQ", "LT", "MINUS", "NE", 
			"NOT", "PLUS", "RBRACE", "RPAR", "RSQ", "SEMI", "SLASH", "STAR", "ID", 
			"NUM", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PickleCannon.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PickleCannonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode CANNON() { return getToken(PickleCannonParser.CANNON, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PickleCannonParser.EOF, 0); }
		public List<ProcContext> proc() {
			return getRuleContexts(ProcContext.class);
		}
		public ProcContext proc(int i) {
			return getRuleContext(ProcContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PICKLE) {
				{
				{
				setState(28);
				proc();
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34);
			match(CANNON);
			setState(35);
			block();
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcContext extends ParserRuleContext {
		public TerminalNode PICKLE() { return getToken(PickleCannonParser.PICKLE, 0); }
		public TerminalNode ID() { return getToken(PickleCannonParser.ID, 0); }
		public TerminalNode LPAR() { return getToken(PickleCannonParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(PickleCannonParser.RPAR, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<ParsContext> pars() {
			return getRuleContexts(ParsContext.class);
		}
		public ParsContext pars(int i) {
			return getRuleContext(ParsContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PickleCannonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PickleCannonParser.COMMA, i);
		}
		public ProcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterProc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitProc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitProc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcContext proc() throws RecognitionException {
		ProcContext _localctx = new ProcContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_proc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(PICKLE);
			setState(39);
			match(ID);
			setState(40);
			match(LPAR);
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BOOL || _la==INT) {
				{
				setState(41);
				pars();
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(42);
					match(COMMA);
					setState(43);
					pars();
					}
					}
					setState(48);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(51);
			match(RPAR);
			setState(52);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParsContext extends ParserRuleContext {
		public ParsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pars; }
	 
		public ParsContext() { }
		public void copyFrom(ParsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrayArgContext extends ParsContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(PickleCannonParser.ID, 0); }
		public TerminalNode LSQ() { return getToken(PickleCannonParser.LSQ, 0); }
		public TerminalNode RSQ() { return getToken(PickleCannonParser.RSQ, 0); }
		public ArrayArgContext(ParsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterArrayArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitArrayArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitArrayArg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarArgContext extends ParsContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(PickleCannonParser.ID, 0); }
		public VarArgContext(ParsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterVarArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitVarArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitVarArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParsContext pars() throws RecognitionException {
		ParsContext _localctx = new ParsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pars);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new VarArgContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				type();
				setState(55);
				match(ID);
				}
				break;
			case 2:
				_localctx = new ArrayArgContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				type();
				setState(58);
				match(ID);
				setState(59);
				match(LSQ);
				setState(60);
				match(RSQ);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(PickleCannonParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PickleCannonParser.RBRACE, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(LBRACE);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << FORK) | (1L << IF) | (1L << JOIN) | (1L << PRINT) | (1L << SYNC) | (1L << WHILE) | (1L << LBRACE) | (1L << ID))) != 0)) {
				{
				{
				setState(65);
				stat();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfStatContext extends StatContext {
		public TerminalNode IF() { return getToken(PickleCannonParser.IF, 0); }
		public TerminalNode LPAR() { return getToken(PickleCannonParser.LPAR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(PickleCannonParser.RPAR, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(PickleCannonParser.ELSE, 0); }
		public IfStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterIfStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitIfStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitIfStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArrayVarStatContext extends StatContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(PickleCannonParser.ID, 0); }
		public TerminalNode LSQ() { return getToken(PickleCannonParser.LSQ, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RSQ() { return getToken(PickleCannonParser.RSQ, 0); }
		public TerminalNode SEMI() { return getToken(PickleCannonParser.SEMI, 0); }
		public TerminalNode ASSIGN() { return getToken(PickleCannonParser.ASSIGN, 0); }
		public ArrayVarStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterArrayVarStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitArrayVarStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitArrayVarStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockStatContext extends StatContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlockStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterBlockStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitBlockStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitBlockStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SimpleVarStatContext extends StatContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(PickleCannonParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(PickleCannonParser.SEMI, 0); }
		public TerminalNode ASSIGN() { return getToken(PickleCannonParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SimpleVarStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterSimpleVarStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitSimpleVarStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitSimpleVarStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintStatContext extends StatContext {
		public TerminalNode PRINT() { return getToken(PickleCannonParser.PRINT, 0); }
		public TerminalNode LPAR() { return getToken(PickleCannonParser.LPAR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(PickleCannonParser.RPAR, 0); }
		public TerminalNode SEMI() { return getToken(PickleCannonParser.SEMI, 0); }
		public PrintStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterPrintStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitPrintStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitPrintStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SyncStatContext extends StatContext {
		public TerminalNode SYNC() { return getToken(PickleCannonParser.SYNC, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public SyncStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterSyncStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitSyncStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitSyncStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CallStatContext extends StatContext {
		public TerminalNode ID() { return getToken(PickleCannonParser.ID, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PickleCannonParser.SEMI, 0); }
		public CallStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterCallStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitCallStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitCallStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForkStatContext extends StatContext {
		public TerminalNode FORK() { return getToken(PickleCannonParser.FORK, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForkStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterForkStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitForkStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitForkStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignStatContext extends StatContext {
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(PickleCannonParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PickleCannonParser.SEMI, 0); }
		public AssignStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterAssignStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitAssignStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitAssignStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class JoinStatContext extends StatContext {
		public TerminalNode JOIN() { return getToken(PickleCannonParser.JOIN, 0); }
		public TerminalNode SEMI() { return getToken(PickleCannonParser.SEMI, 0); }
		public JoinStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterJoinStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitJoinStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitJoinStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileStatContext extends StatContext {
		public TerminalNode WHILE() { return getToken(PickleCannonParser.WHILE, 0); }
		public TerminalNode LPAR() { return getToken(PickleCannonParser.LPAR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(PickleCannonParser.RPAR, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).enterWhileStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PickleCannonListener ) ((PickleCannonListener)listener).exitWhileStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PickleCannonVisitor ) return ((PickleCannonVisitor<? extends T>)visitor).visitWhileStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stat);
		int _la;
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new SimpleVarStatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				type();
				setState(74);
				match(ID);
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(75);
					match(ASSIGN);
					setState(76);
					expr(0);
					}
				}

				setState(79);
				match(SEMI);
				}
				break;
			case 2:
				_localctx = new ArrayVarStatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				type();
				setState(82);
				match(ID);
				setState(83);
				match(LSQ);
				setState(84);
				expr(0);
				setState(85);
				match(RSQ);
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(86);
					match(ASSIGN);
					setState(87);
					expr(0);
					}
				}

				setState(90);
				match(SEMI);
				}
				break;
			case 3:
				_localctx = new AssignStatContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				target();
				setState(93);
				match(ASSIGN);
				setState(94);
				expr(0);
				setState(95);
				match(SEMI);
				}
				break;
			case 4:
				_localctx = new IfStatContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				match(IF);
				setState(98);
				match(LPAR);
				setState(99);
				expr(0);
				setState(100);
				match(RPAR);
				setState(101);
				block();
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(102);
					match(ELSE);
					setState(103);
					block();
					}
				}

				}
				break;
			case 5:
				_localctx = new WhileStatContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(106);
				match(WHILE);
				setState(107);
				match(LPAR);
				setState(108);
				expr(0);
				setState(109);
				match(RPAR);
				setState(110);
				block();
				}
				break;
			case 6:
				_localctx = new ForkStatContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(112);
				match(FORK);
				setState(113);
				block();
				}
				break;
			case 7:
				_localctx = new JoinStatContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(114);
				match(JOIN);
				setState(115);
				match(SEMI);
				}
				break;
			case 8:
				_localctx = new SyncStatContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(116);
				match(SYNC);
				setState(117);
				block();
				}
				break;
			case 9:
				_localctx = new BlockStatContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(118);
				block();
				}
				break;
			case 10:
				_localctx = new PrintStatContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(119);
				match(PRINT);
				setState(120);
				match(LPAR);
				setState(121);
				expr(0);
				setState(122);
				match(RPAR);
				setState(123);
				match(SEMI);
				}
				break;
			case 11:
				_localctx = new CallStatContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(125);
				match(ID);
				setState(126);
				args();
				setState(127);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
